  * Add support for the Caché database (dprekker).
  * Add an option to treat capitalized and lowercase topic names as a single
    record.  For example, "Topic" and "topic" would refer to the same topic.
  * Display pagination options when viewing topic categories.
  * Reduce the amount of parsing the must be done when importing topics in
    order to improve performance.
  * Remove ability to automatically upgrade from versions prior to 0.8.0.
  * Remove unused/obsolete Javascript and namespace the remaining code.
  * Organize uploaded images by virtual wiki on the file system.
  * Add several indexes to the database to improve query performance.
  * Persist configuration information to a new jam_configuration table in
    addition to the jamwiki.properties file.  This table will be used in future
    releases.
  * Upgrade to Spring Framework 3.0.5.RELEASE.
  * Upgrade to Spring Security 3.0.5.RELEASE.
  * Upgrade to Ehcache 2.1.0.
  * Upgrade to Lucene Search 3.0.3.
  * Upgrade to commons-fileupload-1.2.2.
  * Upgrade to commons-io-2.0.

Bugfixes:

  * Fix template parsing when <includeonly>|</includeonly> is used.
  * Fix template parsing for syntax like "{{{template}}".
  * Interwiki links and virtual wiki links with no topic name of the form
    "[[interwiki:]]" or "[[:virtualwiki:]]" should link to the root page of
    the link target.
  * Images with multiple captions ([[Image:Example.gif|caption1|caption2]])
    should only render the last caption value specified.
  * Fix a design flaw in processing of nested metadata, such as categories
    included via templates or "link to" in records in image captions.
  * A corrupt image should not halt page parsing; instead just display the
    image name as text.
  * Refactor image processing code to use less memory and avoid OOM errors.
  * For SVG images and other images that cannot be resized by the JVM, return
    a link to the image file rather than an upload link or error message.