@@ -18,7 +18,7 @@
 <div class="floatnone"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></a></div>
 <p>thumbnail image</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
 </div>
 <p>bordered image</p>
 <p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg thumbborder" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></a></p>
@@ -27,22 +27,22 @@
 <div class="thumbinner" style="width:402px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></a></div>
 </div>
 <p>frameless image</p>
-<p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></p>
+<p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></p>
 <p>frameless bordered image</p>
-<p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg thumbborder" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></p>
+<p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg thumbborder" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></p>
 <p>centered thumbnail</p>
 <div class="center">
 <div class="thumb tnone">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
 </div>
 </div>
 <p>right-aligned thumbnail</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
 </div>
 <p>left-aligned thumbnail</p>
 <div class="thumb tleft">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
 </div>
 <p>plain image with caption</p>
 <p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></a></p>
@@ -52,7 +52,7 @@
 <div class="floatnone"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></a></div>
 <p>thumbnail with caption</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
 <div class="thumbcaption">this is a caption blah blah blah blah blah blah blah blah blah blah blah</div>
 </div>
 </div>
@@ -65,33 +65,33 @@
 </div>
 </div>
 <p>frameless image with caption</p>
-<p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></p>
+<p><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></p>
 <p>left-aligned thumbnail with caption</p>
 <div class="thumb tleft">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
 <div class="thumbcaption">this is a caption blah blah blah blah blah blah blah blah blah blah blah</div>
 </div>
 </div>
-<p>image within a paragraph <a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a> test to make sure text flows</p>
+<p>image within a paragraph <a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a> test to make sure text flows</p>
 <p>thumbnail within a paragraph</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
 </div>
 <p>test to make sure text breaks</p>
-<p>vertical align standard <a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" style="vertical-align: baseline" /></a></p>
+<p>vertical align standard <a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" style="vertical-align: baseline" /></a></p>
 <p>vertical align thumbnail</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
 </div>
 <p>vertical align frame</p>
 <div class="thumb tright">
 <div class="thumbinner" style="width:402px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></a></div>
 </div>
 <p>vertical align left</p>
-<div class="floatleft"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" style="vertical-align: baseline" /></a></div>
+<div class="floatleft"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" style="vertical-align: baseline" /></a></div>
 <p>alt tag standard <a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="alternate text" /></a></p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="alternate text" /></a>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="alternate text" /></a>
 <div class="thumbcaption">caption</div>
 </div>
 </div>
@@ -104,77 +104,77 @@
 <p>internal link #5 <a class="wikiimg" href="/wiki/test/StartingPoints"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></a></p>
 <p>internal link #6</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a></div>
 </div>
 <p><a href="/files/test_image.jpg" title="Media:Test Image.jpg">Media:Test Image.jpg</a></p>
 <p><a href="/files/test_image.jpg" title="Media:Test Image.jpg">test image caption</a></p>
 <p><a href="/wiki/en/Special:Upload?topic=Image:Non-existent image.jpg" title="Media:Non-existent image.jpg">Media:Non-existent image.jpg</a></p>
 <p><a href="/wiki/en/Special:Upload?topic=Image:Non-existent image.jpg" title="Media:Non-existent image.jpg">non-existent image caption</a></p>
-<p>resize #1 <img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></p>
-<p>resize #2 <img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></p>
-<p>resize #3 <img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></p>
+<p>resize #1 <img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></p>
+<p>resize #2 <img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></p>
+<p>resize #3 <img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></p>
 <p>resize #4 <img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></p>
-<p>resize #5 <img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></p>
+<p>resize #5 <img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></p>
 <p>resize #6 <img class="wikiimg" src="/files/test_image.jpg" width="800" height="534" alt="Test Image.jpg" /></p>
-<p>resize #7 <img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></p>
+<p>resize #7 <img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></p>
 <p>caption test #1</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
 <div class="thumbcaption">Caption with a <a href="/wiki/en/StartingPoints" title="StartingPoints">StartingPoints</a> link</div>
 </div>
 </div>
 <p>caption test #2</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
 <div class="thumbcaption">Caption with a <a href="/wiki/en/StartingPoints" title="StartingPoints">alt text</a> link</div>
 </div>
 </div>
 <p>caption test #3</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
 <div class="thumbcaption">Caption with a <a class="externallink" rel="nofollow" href="http://example.com/">http://example.com/</a> link</div>
 </div>
 </div>
 <p>caption test #4</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
 <div class="thumbcaption">Caption with a <a class="externallink" rel="nofollow" href="http://example.com/">example</a> link</div>
 </div>
 </div>
 <p>caption test #5</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
 <div class="thumbcaption">Caption with a <a class="externallink" rel="nofollow" href="http://example.com/">http://example.com/</a> link</div>
 </div>
 </div>
 <p>caption test #6</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
 <div class="thumbcaption">Caption with a <a class="externallink" rel="nofollow" href="http://example.com/">http://example.com/</a></div>
 </div>
 </div>
 <p>caption test #7</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
 <div class="thumbcaption">Caption with a <a class="externallink" rel="nofollow" href="http://example.com/">link</a></div>
 </div>
 </div>
 <p>caption test #8</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
 <div class="thumbcaption">Test [[ Caption</div>
 </div>
 </div>
 <p>caption test #9</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
 <div class="thumbcaption">Test</div>
 </div>
 </div>
 <p>Caption]]</p>
 <p>caption test #10</p>
 <div class="thumb tright">
-<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
+<div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
 <div class="thumbcaption">caption2</div>
 </div>
 </div>
